# tpkb50

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
pcb/: tpkb50.kicad_pro  tpkb50.kicad_sch  tpkb50.kicad_sym
pcb/tpkb50.pretty/: D_DO-35_SOD27_P7.62mm_Horizontal.kicad_mod  SW_Cherry_MX_1.00u_Plate_18.5_fixed.kicad_mod  SW_Cherry_MX_1.50u_Plate_18.5_fixed.kicad_mod
src/: action.rs  keyboard.rs  keycodes.rs  keymatrix.rs  layout.rs  lib.rs  trackpoint.rs
